infra/istio/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: transaction-api-gateway
  namespace: dev
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: MUTUAL
        minProtocolVersion: TLSV1_3
        credentialName: cloudflare-origin-cert
      hosts:
        - "chizer.dev.nationsbenefits.com"
